// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with signature confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
    data-testid="confirm-header"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
        >
          <img
            alt="maskicon"
            height="32"
            src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
            width="32"
          />
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-goerli mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
        >
          G
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-0 mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          data-testid="header-account-name"
        >
          Test Account
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          data-testid="header-network-display-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info__account-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with token transfer confirmation initiated in a dApp 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--padding-inline-3 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-background-default"
    style="z-index: 2; position: relative;"
  >
    <h4
      class="mm-box mm-text mm-text--heading-sm mm-box--color-inherit"
    >
      Transfer request
    </h4>
    <div
      class="mm-box mm-box--padding-right-3"
      style="margin-left: auto; position: absolute; right: 0px;"
    >
      <div
        class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-4"
            class=""
            data-original-title="Show advanced details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Advanced tx details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-advanced-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/customize.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with token transfer confirmation initiated in the wallet 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--padding-inline-3 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--background-color-background-default"
    style="z-index: 2;"
  >
    <button
      aria-label="Back"
      class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="wallet-initiated-header-back-button"
    >
      <span
        class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/arrow-left.svg');"
      />
    </button>
    <h4
      class="mm-box mm-text mm-text--heading-sm mm-box--color-inherit"
    >
      Review
    </h4>
    <div
      class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
    >
      <div>
        <div
          aria-describedby="tippy-tooltip-5"
          class=""
          data-original-title="Show advanced details"
          data-tooltipped=""
          style="display: inline;"
          tabindex="0"
        >
          <button
            aria-label="Advanced tx details"
            class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="header-advanced-details-button"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/customize.svg');"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with transaction confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
    data-testid="confirm-header"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
        >
          <img
            alt="maskicon"
            height="32"
            src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
            width="32"
          />
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-goerli mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
        >
          G
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-0 mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          data-testid="header-account-name"
        />
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          data-testid="header-network-display-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-2"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info__account-details-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
        <div
          class="mm-box mm-box--margin-right-1 mm-box--background-color-transparent mm-box--rounded-md"
        >
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Show advanced details"
              data-tooltipped=""
              style="display: inline;"
              tabindex="0"
            >
              <button
                aria-label="Advanced tx details"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="header-advanced-details-button"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/customize.svg');"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
